修改JDK11反射构造实例方法，注解自动生成新建和更新时间