@@ -24,7 +24,7 @@ import java.util.Map;
  * <p>
  * 创建时间: 2019-11-15 09:45
  * </p>
- * 
+ *
  * @param <T>
  * @author yanglin
  */
@@ -40,18 +40,17 @@ public abstract class BaseHIbernateController<T> {
      * <p>
      * 创建时间: 2019-11-14 17:36
      * </p>
-     * 
+     *
      * @param t 对象数据
      * @return Map
      * @throws SecurityException        安全异常
      * @throws NoSuchFieldException     无属性异常
      * @throws IllegalAccessException   非法访问异常
      * @throws IllegalArgumentException 非法论证异常
-     * 
      * @author yanglin
      */
     @ApiOperation(value = "保存接口，body参数中有id，是更新；否则是新增（自动生成）")
-    @RequestMapping(value = "", method = { RequestMethod.POST, RequestMethod.PUT })
+    @RequestMapping(value = "", method = {RequestMethod.POST, RequestMethod.PUT})
     public Map<String, Object> save(@RequestBody T t)
             throws NoSuchFieldException, SecurityException, IllegalArgumentException, IllegalAccessException {
         Map<String, Object> result = new HashMap<>(ConstantUtil.RESULT_MAP_INIT_COUNT);
@@ -78,22 +77,21 @@ public abstract class BaseHIbernateController<T> {
      * <p>
      * 创建时间: 2019-11-15 09:45
      * </p>
-     * 
+     *
      * @param id 自增主键
      * @return Map<String, Object>
      * @throws IllegalAccessException 非法进入异常
      * @throws InstantiationException 实例化异常
-     * 
      * @author yanglin
      */
-    @SuppressWarnings({ "unchecked", "rawtypes" })
+    @SuppressWarnings({"unchecked", "rawtypes"})
     @ApiOperation(value = "根据id删除（自动生成）", httpMethod = "DELETE")
     @ApiImplicitParams({
-            @ApiImplicitParam(name = "id", value = "自增主键", required = true, dataType = "String", paramType = "path") })
+            @ApiImplicitParam(name = "id", value = "自增主键", required = true, dataType = "String", paramType = "path")})
     @RequestMapping(value = "{id}", method = RequestMethod.DELETE)
-    public Map<String, Object> delete(@PathVariable Long id) throws InstantiationException, IllegalAccessException {
+    public Map<String, Object> delete(@PathVariable Long id) throws Exception {
         T t = (T) ((Class) ((ParameterizedType) this.getClass().getGenericSuperclass()).getActualTypeArguments()[0])
-                .newInstance();
+                .getDeclaredConstructor().newInstance();
 //        // 更新数据用户信息
 //        Long userId = ((User) SecurityUtils.getSubject().getPrincipal()).getId();
 //        ParamUtil.putField(t, "updateUserId", userId);
@@ -110,22 +108,21 @@ public abstract class BaseHIbernateController<T> {
      * <p>
      * 创建时间: 2019-11-15 09:46
      * </p>
-     * 
+     *
      * @param id 自增主键
      * @return Map<String, Object>
      * @throws IllegalAccessException 非法进入异常
      * @throws InstantiationException 实例化异常
-     * 
      * @author yanglin
      */
-    @SuppressWarnings({ "unchecked", "rawtypes" })
+    @SuppressWarnings({"unchecked", "rawtypes"})
     @ApiOperation(value = "根据id对象信息（自动生成）", httpMethod = "GET")
     @ApiImplicitParams({
-            @ApiImplicitParam(name = "id", value = "自增主键", required = true, dataType = "String", paramType = "path") })
+            @ApiImplicitParam(name = "id", value = "自增主键", required = true, dataType = "String", paramType = "path")})
     @RequestMapping(value = "{id}", method = RequestMethod.GET)
-    public Map<String, Object> info(@PathVariable Long id) throws InstantiationException, IllegalAccessException {
+    public Map<String, Object> info(@PathVariable Long id) throws Exception {
         T t = (T) ((Class) ((ParameterizedType) this.getClass().getGenericSuperclass()).getActualTypeArguments()[0])
-                .newInstance();
+                .getDeclaredConstructor().newInstance();
         ParamUtil.putField(t, "id", id);
         Map<String, Object> result = new HashMap<>(ConstantUtil.RESULT_MAP_INIT_COUNT);
         result.put("data", baseHibernateService.info(t));
@@ -139,12 +136,11 @@ public abstract class BaseHIbernateController<T> {
      * <p>
      * 创建时间: 2019-11-15 09:46
      * </p>
-     * 
+     *
      * @param t    对象数据
      * @param page 页数
      * @param size 每页显示数量
      * @return Map<String, Object>
-     * 
      * @author yanglin
      */
     @ApiOperation(value = "根据对象条件查询分页列表（自动生成）", httpMethod = "GET")
@@ -152,11 +148,11 @@ public abstract class BaseHIbernateController<T> {
             @ApiImplicitParam(name = "page", value = "页数，默认第一页为"
                     + ConstantUtil.DEFAULT_PAGE_INDEX, required = false, dataType = "String", paramType = "query"),
             @ApiImplicitParam(name = "size", value = "每页显示数量，默认每页数量为"
-                    + ConstantUtil.DEFAULT_PAGE_SIZE, required = false, dataType = "String", paramType = "query") })
+                    + ConstantUtil.DEFAULT_PAGE_SIZE, required = false, dataType = "String", paramType = "query")})
     @RequestMapping(value = "", method = RequestMethod.GET)
     public Map<String, Object> list(T t,
-            @RequestParam(value = "page", required = false, defaultValue = ConstantUtil.DEFAULT_PAGE_INDEX) Integer page,
-            @RequestParam(value = "size", required = false, defaultValue = ConstantUtil.DEFAULT_PAGE_SIZE) Integer size) {
+                                    @RequestParam(value = "page", required = false, defaultValue = ConstantUtil.DEFAULT_PAGE_INDEX) Integer page,
+                                    @RequestParam(value = "size", required = false, defaultValue = ConstantUtil.DEFAULT_PAGE_SIZE) Integer size) {
         Map<String, Object> result = new HashMap<>(ConstantUtil.RESULT_MAP_INIT_COUNT);
         Map<String, Object> r = baseHibernateService.list(t, PageRequest.of(page, size));
         result.put("data", (List<?>) r.get("list"));
